--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "main": "./src/main.js",
   "description": "generate github contribution or other activities in canvas",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xingoxu/canvas-contribution"
+  },
   "scripts": {
     "dev": "node build.js dev",
     "build": "node build.js build"
