--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.8",
     "browser-sync-webpack-plugin": "^1.1.4",
+    "empty-module": "^0.0.2",
     "html-webpack-plugin": "^2.28.0",
     "ora": "^1.1.0",
     "path": "latest",
